--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -41,7 +41,7 @@ footer{
     top: 30px;
     height: 40px; 
     padding:5px 5px;
-    background: #8A0808;
+    background: #eee;
     color: #fff;
     clear: both;
 }
