--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -36,7 +36,9 @@
 
       <footer class="main" id="f1">
         <a href="http://es.wikipedia.org/wiki/Quiz">
-          ¿Que es un Quiz?</a>
+          ¿Que es un Quiz?</a><p>
+        <a href="https://github.com/bersaglio/Quiz">
+          QUIZ: Github</a>
       </footer>    
         </div>
       </body>
