--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,13 +25,18 @@
 
     <nav class="main" id="n1" role="navigarion">
       <span><a href="/">Inicio</a></span>
-      <span><a href="/quizes/question">Preguntas</a></span>
+      <span><a href="/quizes">Preguntas</a></span>
       <span><a href="/author">Creditos</a></span>
 
     </nav>
 
       <section class="main" id="s1">
-        <div><%- body%></div>
+        <div>
+        <table>
+        <tr><td><a href="quizes/1">¿Cuál es la capital de Italia?</a></td></tr>
+        <tr><td><a href="quizes/2">¿Cuál es la capital de Portugal?</a></td></tr>
+         </table>
+        </div>
       </section>
 
       <footer class="main" id="f1">
