--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,20 +23,14 @@
     </header>
 
 
-    <nav class="main" id="n1" role="navigarion">
+    <nav class="main" id="n1" role="navigation">
       <span><a href="/">Inicio</a></span>
       <span><a href="/quizes">Preguntas</a></span>
-      <span><a href="/author">Creditos</a></span>
-
     </nav>
 
       <section class="main" id="s1">
-        <div>
-        <table>
-        <tr><td><a href="quizes/1">¿Cuál es la capital de Italia?</a></td></tr>
-        <tr><td><a href="quizes/2">¿Cuál es la capital de Portugal?</a></td></tr>
-         </table>
-        </div>
+
+        <%- body %>
       </section>
 
       <footer class="main" id="f1">
