--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,7 +1,8 @@
 
- <form method="get" action="/quizes/<%=quiz.id %>/answer"> 
+<form method="get" action="/quizes/<%= quiz.id %>/answer">        
+  <%= quiz.pregunta %> <p>
+  <input type="text" name="respuesta" value="Respuesta"/>
+  <input type="submit" value="Enviar">
+  
+</form>
 
-pregunta: <%= quiz.pregunta %> <p>       
-    <input type="text" name="respuesta" value="Respuesta"/>
-    <input type="submit" value="Enviar">
-  </form>
