--- a/public/stylesheets/wide.css
+++ b/public/stylesheets/wide.css
@@ -7,6 +7,8 @@ nav span  { margin: 0px 100px 0px 0px;}
 section   { float: right; width: 80%; height: 200px ;}
 footer    { clear: both;  display: block; }
 
+nav span { margin: 0px 10px 0px 0px;}
+#ErrorMsgs { color: #f61; font-size:smaler}
 
 h1 { color: ;
      text-align: center;
