--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -12,6 +12,7 @@
       <td>
         <a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a>
         </td>
+       <td><a href="quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a></td>
     </tr> 
   <% } %>
 </table>
