--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,7 +11,7 @@
   <link rel='stylesheet' 
         type='text/css' 
         media= 'only screen and (max-width: 480px)' 
-        href='/stylesheets/smartyphone.css' />
+        href='/stylesheets/smartphone.css' />
 
 </head>
 
