--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,23 +31,24 @@
     <nav class="main" id="n1" role="navigation">
       <span><a href="/">Inicio</a></span>
       <span><a href="/quizes">Preguntas</a></span>
-       <span><a href="/quizes/statistics">Estadisticas</a></span>
+      <span><a href="/quizes/author">Creditos</a></span> 
+      <span><a href="/quizes/statistics">Estadisticas</a></span>
     </nav>
 
       <section class="main" id="s1">
+
         <% if (errors.length) { %>
-        <span id='ErrorMsgs'>
-        Corregir errores:<br/>
-        <% for ( var i in errors){%>
-          <span> <%= errors[i].message %> </span><br/>
-          <% } %>
-        </span>          
+           <span id='ErrorMsgs'>Corregir errores:<br/>
+              <% for ( var i in errors){%>
+                <span> <%= errors[i].message %> </span><br/>
+               <%}%>
+            </span>          
         <%}%>
 
 
 
         <%- body %>
-      </section>
+      </section> 
 
       <footer class="main" id="f1">
         <a href="http://es.wikipedia.org/wiki/Quiz">
