--- a/public/stylesheets/smartphone.css
+++ b/public/stylesheets/smartphone.css
@@ -11,6 +11,9 @@ footer           { font-size: large; }
 nav span { margin: 0px 10px 0px 0px;}
 #ErrorMsgs { color: #f61; font-size:smaler}
 
+.quiz_img { float: none; } 
+
+
 h1 { color: ;
      text-align: center;
      font-style: oblique;
