--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -12,11 +12,11 @@
                 <td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
                 <%if(session.user){ 
                         if (session.user.isAdmin || session.user.id === quizes[i].UserId) {%>
-                        <td><a href="/quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a></td>
+                        <td><a href="/quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
                         <td>
                             <form method="post" action="/quizes/<%= quizes[i].id %>?_method=delete">
                             <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
-                                Borrar
+                                borrar
                             </button>
                             </form>
                         </td>
@@ -29,3 +29,4 @@
 <%if(session.user){%>
 <a href="/quizes/new"><button type="button">Crear pregunta</button></a>
 <%}%>
+
