--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,6 +31,8 @@
     <nav class="main" id="n1" role="navigation">
       <span><a href="/">Inicio</a></span>
       <span><a href="/quizes">Preguntas</a></span>
+      <%if(session.user){%>
+      <span><a href="/user/<%=session.user.id%>/quizes">Mis Preguntas</a></span>     <%}%>
       <span><a href="/quizes/author">Creditos</a></span> 
       <span><a href="/quizes/statistics">Estadisticas</a></span>
     </nav>
