--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,7 +32,8 @@
       <span><a href="/">Inicio</a></span>
       <span><a href="/quizes">Preguntas</a></span>
       <%if(session.user){%>
-      <span><a href="/user/<%=session.user.id%>/quizes">Mis Preguntas</a></span>     <%}%>
+      <span><a href="/user/<%=session.user.id%>/quizes">Mis Preguntas</a></span>
+       <span><a href="/user/<%=session.user.id%>/favourites">Favoritos</a></span>     <%}%>
       <span><a href="/quizes/author">Creditos</a></span> 
       <span><a href="/quizes/statistics">Estadisticas</a></span>
     </nav>
