--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -6,9 +6,9 @@
   <button type="submit">Buscar</button>
 </form>
 
-<table>
-  <% var i; for (i=0; i < quizes.length; i++) { %>        
-    <tr>
+  <table>
+        <% var i; for (i=0; i<quizes.length; i++){ %>
+            <tr>
                 <td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
                 <%if(session.user){ 
                         if (session.user.isAdmin || session.user.id === quizes[i].UserId) {%>
@@ -20,12 +20,28 @@
                             </button>
                             </form>
                         </td>
-        <%}
-      }%>
-    </tr> 
-  <% } %>
-</table>
-<p/>
+                        <%} %>
+                        
+                        
+                        
+                        
+                        <% if(quizes[i].selected) {%>
+                            <td>
+                                <form method="post" action="/user/<%= session.user.id %>/favourites/<%= quizes[i].id %>?_method=delete">
+                                <input type="image" onClick="return confirm('Eliminar de favoritos: <%= quizes[i].pregunta %>');" src="http://img2.wikia.nocookie.net/__cb20130620210048/inciclopedia/images/1/18/Estrella_amarilla.png" style="width:auto; max-width:14px; heigth:auto;"></form>
+                            </td>
+                        <%} else {%>
+                              <td>
+                                <form method="post" action="/user/<%= session.user.id %>/favourites/<%= quizes[i].id %>?_method=put">
+                                    <input type="image" src="http://arenda-izh.ru/assets/images/4.png" style="width:auto; max-width:14px; heigth:auto;"></form>
+                            </td>  
+                        <%} %> 
+                    <% } %>
+                                  
+            </tr>
+        <% } %>
+        </table>
+            <p/>
 <%if(session.user){%>
 <a href="/quizes/new"><button type="button">Crear pregunta</button></a>
 <%}%>
